update admin product
